fixed img overflow

--- a/src/_includes/sass/post.scss
+++ b/src/_includes/sass/post.scss
@@ -3,6 +3,8 @@
 img {
     max-width: 100%;
     max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 h1 {
